--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <meta name="description" content="Explore Semilogo Ogungbure's personal website showcasing projects in Electrical Engineering, Automation, and more." />
     <meta name="author" content="Semilogo Ogungbure" />
     <meta property="og:title" content="Semilogo Ogungbure - Portfolio" />
+    <!-- Link to FontAwesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Computer Icon -->
+      <i class="fas fa-laptop"></i>
+    </div>
+
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
