--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <meta property="og:title" content="Semilogo Ogungbure - Portfolio" />
     <!-- Link to FontAwesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <!-- CSS to hide any heart icons -->
+    <style>
+      i.fas.fa-heart {
+        display: none;
+      }
+    </style>
   </head>
 
   <body>
